# backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: auto-pr.yml  backend-ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260601_0001_create_users.py
docs/engineering/: auth.md  ci.md  commands.md  git-workflow.md  integration.md  openapi.md  pr-review-checklist.md  tech-stack.md
src/app/: __init__.py  main.py
src/app/api/: __init__.py  auth.py  health.py  router.py  users.py
src/app/auth/: __init__.py  dependencies.py  password.py  sessions.py
src/app/core/: __init__.py  config.py  error_codes.py  exception_handlers.py  exceptions.py  logging.py  redis.py
src/app/db/: __init__.py  base.py  session.py
src/app/models/: __init__.py  user.py
src/app/schemas/: __init__.py  auth.py  common.py  users.py
tests/: test_api_router.py  test_auth_api.py  test_auth_config.py  test_auth_dependencies.py  test_common_schemas.py  test_core_helpers.py  test_db.py  test_exception_handlers.py  test_health.py  test_logging.py  test_openapi.py  test_password_hash.py  test_sessions.py  test_user_model.py
