[project]
name = "backend"
version = "0.1.0"
description = "FastAPI 后端最小可运行脚手架"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.13.0",  # 数据库迁移工具
    "argon2-cffi>=25.1.0",
    "fastapi>=0.115.0",  # Web 框架
    "psycopg[binary]>=3.2.0",  # PostgreSQL 异步驱动
    "pydantic-settings>=2.6.0",  # 配置管理
    "redis>=8.0.0",
    "sqlalchemy>=2.0.0",  # ORM 框架
    "uvicorn[standard]>=0.30.0",  # ASGI 服务器
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
# 开发环境依赖
dev = [
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "pre-commit>=4.6.0",
    "pytest>=8.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.7.0",
]

# 测试配置
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Ruff 代码质量工具配置
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "T20"]

# Mypy 静态类型检查配置
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unreachable = true
warn_unused_ignores = true

# 对第三方依赖放宽类型检查
[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
